@@ -37,7 +37,7 @@
 
 <!-- TERMINATE element -->
 <!ELEMENT TERMINATE EMPTY >
-<!ATTLIST TERMINATE AT_CHAR #REQUIRED >
+<!ATTLIST TERMINATE AT_CHAR CDATA #REQUIRED >
 
 <!-- SEQ element -->
 <!ELEMENT SEQ ( #PCDATA ) >
